Add dense layer to attention

--- a/AmazonReviewSeq2seq.ipynb
+++ b/AmazonReviewSeq2seq.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AmazonReviewSeq2seq.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLGbbzFonD4lj1HZILN1+q",
+      "authorship_tag": "ABX9TyPOq0t5iMAy7e6/WTvw4jUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2476,7 +2476,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/guide2157/Seq2Seq2Summarizer/blob/master/AmazonReviewSeq2seq.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/guide2157/Seq2SeqSummarizer/blob/master/AmazonReviewSeq2seq.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2506,7 +2506,7 @@
       "metadata": {
         "id": "YmpcC-H55gjI",
         "colab_type": "code",
-        "outputId": "7f83a122-f03a-4220-b433-b71c1d18130f",
+        "outputId": "fbfb34da-cb72-44aa-e808-59cd2d3ee2a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -2545,7 +2545,7 @@
       "metadata": {
         "id": "rHSdcjbAGIPe",
         "colab_type": "code",
-        "outputId": "cd2a019d-0114-49bd-a845-47b7d4e4d183",
+        "outputId": "9813e9bb-ff49-4513-d126-0bd3ea2fece1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2594,7 +2594,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2727,7 +2727,7 @@
         "    except:\n",
         "      continue"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2921,6 +2921,7 @@
       "metadata": {
         "id": "QZrAm4sKfiKx",
         "colab_type": "code",
+        "outputId": "e748c145-2afe-433e-97ac-8cd19fa601e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -2934,15 +2935,14 @@
             "0fa0c08b04474c7d9c70f15cac04d7fa",
             "df84c7624bd34f8298d729de7d0f7686"
           ]
-        },
-        "outputId": "e748c145-2afe-433e-97ac-8cd19fa601e3"
+        }
       },
       "source": [
         "cleaned_summary_news = []\n",
         "for t in tqdm(news_summary):\n",
         "    cleaned_summary_news.append(clean_text(t, True))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2974,6 +2974,7 @@
       "metadata": {
         "id": "KJGkPSTgftdV",
         "colab_type": "code",
+        "outputId": "41080b1d-1874-4080-f3d8-bd25ad823d90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -2987,15 +2988,14 @@
             "3e19926e79774c4a98d1cce7a709c981",
             "a26ae7f8350a4fe8a9188da77039240d"
           ]
-        },
-        "outputId": "41080b1d-1874-4080-f3d8-bd25ad823d90"
+        }
       },
       "source": [
         "cleaned_text_news = []\n",
         "for t in tqdm(news_text):\n",
         "    cleaned_text_news.append(clean_text(t))"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3027,6 +3027,7 @@
       "metadata": {
         "id": "QTmuROugvorZ",
         "colab_type": "code",
+        "outputId": "add78760-3ceb-4d84-8c64-8d15212b54aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -3040,15 +3041,14 @@
             "f171c3f9cd454d748397569208051d3b",
             "73c20fbb06de446883a5ed3f85520bfe"
           ]
-        },
-        "outputId": "add78760-3ceb-4d84-8c64-8d15212b54aa"
+        }
       },
       "source": [
         "cleaned_summary = []\n",
         "for t in tqdm(summary):\n",
         "    cleaned_summary.append(clean_text(t, True))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3080,6 +3080,7 @@
       "metadata": {
         "id": "mu-83Kc2kE0b",
         "colab_type": "code",
+        "outputId": "3d4555d8-0853-4be5-c4ac-ece678bd5713",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -3093,15 +3094,14 @@
             "abb95f724dad4d168591a32be41888bf",
             "6dd5ded433cb424e9719a3d48a468d2a"
           ]
-        },
-        "outputId": "3d4555d8-0853-4be5-c4ac-ece678bd5713"
+        }
       },
       "source": [
         "cleaned_text = []\n",
         "for t in tqdm(text):\n",
         "    cleaned_text.append(clean_text(t))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3143,11 +3143,11 @@
       "metadata": {
         "id": "Xtz1GDcWtK0Q",
         "colab_type": "code",
+        "outputId": "8e345b04-2101-4862-93bc-7f9fd541e186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
-        },
-        "outputId": "8e345b04-2101-4862-93bc-7f9fd541e186"
+        }
       },
       "source": [
         "import seaborn as sns\n",
@@ -3181,7 +3181,7 @@
         "# plt.title(\"Summaries length\")\n",
         "# plt.show()"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3229,11 +3229,11 @@
       "metadata": {
         "id": "li8KU6Rh2h_M",
         "colab_type": "code",
+        "outputId": "17750c71-bc4a-4501-ae4b-893470d3fcc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "17750c71-bc4a-4501-ae4b-893470d3fcc3"
+        }
       },
       "source": [
         "print(cleaned_text[0])\n",
@@ -3242,7 +3242,7 @@
         "print(cleaned_text_news[0])\n",
         "print(cleaned_summary_news[0])"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3440,8 +3440,8 @@
         "  def __init__(self, word_to_vec_map, words_to_index, latent_dim):\n",
         "    super(Encoder, self).__init__()\n",
         "    self.latent_dim = latent_dim\n",
-        "    self.embedding_layer = Glove_Embedding(word_to_vec_map, words_to_index)\n",
-        "    # self.embedding_layer = Embedding(len(words_to_index) + 1, latent_dim)\n",
+        "    # self.embedding_layer = Glove_Embedding(word_to_vec_map, words_to_index)\n",
+        "    self.embedding_layer = Embedding(len(words_to_index) + 1, latent_dim)\n",
         "    self.lstm1 = Bidirectional(LSTM(latent_dim, dropout=0.2, return_state=True, return_sequences=True))\n",
         "\n",
         "  def call(self,inputs):\n",
@@ -3466,9 +3466,11 @@
         "  def __init__(self, word_to_vec_map, words_to_index, latent_dim):\n",
         "    super(Decoder, self).__init__()\n",
         "    self.latent_dim = latent_dim\n",
-        "    # self.embedding_layer = Embedding(len(words_to_index) + 1, latent_dim)\n",
-        "    self.embedding_layer = Glove_Embedding(word_to_vec_map, words_to_index)\n",
+        "    self.embedding_layer = Embedding(len(words_to_index) + 1, latent_dim)\n",
+        "    # self.embedding_layer = Glove_Embedding(word_to_vec_map, words_to_index)\n",
         "    self.lstm = LSTM(latent_dim * 2, return_sequences=True, return_state=True,dropout=0.2)\n",
+        "    self.dense1 = Dense(latent_dim)\n",
+        "    self.dense2 = Dense(latent_dim)\n",
         "    self.attention = Attention()\n",
         "    self.time_dist = TimeDistributed(Dense(len(words_to_index) + 1, activation='softmax'))\n",
         "\n",
@@ -3476,7 +3478,9 @@
         "    state_h, state_c = states\n",
         "    embed = self.embedding_layer(inputs)\n",
         "    lstm_out, state_h, state_c = self.lstm(embed, initial_state=[state_h, state_c])\n",
-        "    attn_out = self.attention([lstm_out, encoder_output]) \n",
+        "    dense_en = self.dense1(encoder_output)\n",
+        "    dense_lstm = self.dense2(lstm_out)\n",
+        "    attn_out = self.attention([dense_lstm, encoder_output, dense_en]) \n",
         "    decoder_concat_input = tf.concat([lstm_out, attn_out], axis=-1)\n",
         "    outputs = self.time_dist(decoder_concat_input)  \n",
         "    return outputs, state_h, state_c"
@@ -3565,7 +3569,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 146,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3620,15 +3624,15 @@
       "metadata": {
         "id": "Ec__CBe5tf5U",
         "colab_type": "code",
+        "outputId": "43729083-b950-4925-e9d8-d9f4fe47ed65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "43729083-b950-4925-e9d8-d9f4fe47ed65"
+        }
       },
       "source": [
         "%load_ext tensorboard"
       ],
-      "execution_count": 149,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3694,11 +3698,11 @@
       "metadata": {
         "id": "ebwlg8_wH-aT",
         "colab_type": "code",
+        "outputId": "f177982f-798f-453d-febd-9afa5972f393",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f177982f-798f-453d-febd-9afa5972f393"
+        }
       },
       "source": [
         "history=model.fit([X_train,y_train[:,:-1]], \n",
@@ -3708,7 +3712,7 @@
         "                  batch_size=256, \n",
         "                  validation_data=([X_val,y_val[:,:-1]], y_val.reshape(y_val.shape[0],y_val.shape[1], 1)[:,1:]))"
       ],
-      "execution_count": 161,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3872,16 +3876,16 @@
       "metadata": {
         "id": "AGggjeaX7n7M",
         "colab_type": "code",
+        "outputId": "29a1c9f0-3d28-4ff3-d656-115551469363",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "29a1c9f0-3d28-4ff3-d656-115551469363"
+        }
       },
       "source": [
         "decode_sequence(X_val[900].reshape(1,max_len_text))"
       ],
-      "execution_count": 253,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3915,16 +3919,16 @@
       "metadata": {
         "id": "FqLCRe8zGLFu",
         "colab_type": "code",
+        "outputId": "a937aa3c-2206-4533-9fbf-b3f31f0231a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "a937aa3c-2206-4533-9fbf-b3f31f0231a8"
+        }
       },
       "source": [
         "val_text[900]"
       ],
-      "execution_count": 252,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3958,16 +3962,16 @@
       "metadata": {
         "id": "7x1OAQIwPSog",
         "colab_type": "code",
+        "outputId": "e8d71d70-eaf0-4bb7-8fc9-b57fe15b7c17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e8d71d70-eaf0-4bb7-8fc9-b57fe15b7c17"
+        }
       },
       "source": [
         "val_sum[900]"
       ],
-      "execution_count": 254,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
